--- a/client.html
+++ b/client.html
@@ -3,14 +3,13 @@
    <head>
       <meta charset="utf-8">
       <title>Dane pogodowe</title>
-      <link href='https://fonts.googleapis.com/css?family=Annie Use Your Telescope' rel='stylesheet'>
       <link type="text/css" href="proj.css" rel="stylesheet">
-      <script src="rest.js" type="text/javascript"></script>
+      <script src="rest.js"></script>
       <script src="http://www.myersdaily.org/joseph/javascript/md5.js"></script> 
    </head>
    <body>
       <div id="wrapper">
-     <header><big>Dane pogodowe</big></header>
+     <header><h1>Dane pogodowe</h1></header>
       <nav>
           <button id="regB" onclick="_reg_form()">Rejestracja</button>
           <button id="logB" onclick="_log_form()">Logowanie</button>
@@ -26,8 +25,10 @@
      <div id="push"></div>
    </div>
      <footer>
-       TI 2020/21 Olga Kubiszyn <br/>
-        <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Joos_de_Momper_II_-_Winter_landscape.jpeg/1280px-Joos_de_Momper_II_-_Winter_landscape.jpeg">Obraz w tle</a>
-      </footer> 
+       <p>TI 2021/2022</p> 
+       <p><b>Mariusz Marszałek</b></p>
+      </footer>
     </body>  
 </html>
+
+<!-- DODAJ ASYNC W RYSOWANIU I DODAJ NOWA OS DLA WIATRU, MOZE DODAJ ZAMIANE DANYCH PRZY DODANIU TEJ SAMEJ DATY -->
